# parallel-algorithms-course

ex_1_7/: CMakeLists.txt  benchmark.sh  counts.txt  plot_counts.gnu  plot_timings.gnu
ex_1_7/doc/: 01_report.md  Makefile  latex.template
ex_1_7/include/: ex17.h
ex_1_7/src/: count.c  ex17.c  generate.c  goldbach.c
